--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ span.fade {
     color: #19d3da;
     font-weight: bold;
     font-size: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
 }
 
 .about-para {
@@ -132,6 +132,7 @@ span.fade {
     font-family: 'Montserrat', sans-serif;
     font-size: 19px;
     line-height: 2;
+    text-align: center;
 }
 
 .video {
@@ -151,49 +152,6 @@ span.fade {
     margin-top: 50px;
 }
 
-.labels {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    line-height: 2;
-    color: #000839;
-}
-
-.input-labels {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    color: black;
-}
-
-input[type=submit] {
-    background-color: #19d3da;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-}
-
-input[type=submit]:hover {
-    background-color: #01a9b4;
-    transform: scale(1.01);
-    transition: 0.4s linear;
-}
-
-input[type=reset] {
-    background-color: #19d3da;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-}
-
-input[type=reset]:hover {
-    background-color: #01a9b4;
-    transform: scale(1.01);
-    transition: 0.4s linear;
+.contact-para {
+    text-align: center;
 }
