--- a/styles.css
+++ b/styles.css
@@ -317,3 +317,42 @@ nav a:hover {
 .contact-para {
     text-align: center;
 }
+
+.contact-box-wrapper {
+    top: -60px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-box:first-child {
+    margin-right: 20px;
+}
+
+.contact-box {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 32px 40px;
+    background-color: #fff;
+    border: 1px solid #eaf0f6;
+}
+
+.cta, .cta--primary, .cta--primary-dark {
+    text-align: center;
+    border-radius: .1875rem;
+    transition: 0.3s ease-in-out;
+    display: inline-block;
+    text-decoration: none;
+    border: 0;
+    font-weight: 600;
+    line-height: 1.5em;
+    background-color: #ff7a59;
+    color: #fff;
+    border: 1px solid #ff7a59;
+    padding: 0.9em 1.388em;
+    font-size: .9375rem;
+    min-width: 8.555rem;
+}
