--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav a:hover {
     margin: 2px;
     text-align: left;
     border-radius: 50px 0px 0px 50px;
-    transform: translate(140px, 0px);
+    transform: translate(145px, 0px);
     transition: all 0.5s;
 }
 
@@ -181,12 +181,12 @@ nav a:hover {
 /* ===== ABOUT SECTION ===== */
 
 #about {
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 .section-heading {
-    /* margin-top: 200px; */
-    text-align: center;
+    /* margin-top: 100px; */
+    text-align: center !important;
     font-family: 'Montserrat', sans-serif;
     color: #19d3da;
     font-weight: bold;
@@ -215,10 +215,10 @@ nav a:hover {
 
 /* ===== COMMUNITY SECTION ===== */
 
-
-/* #community {
+#community {
+    margin-top: 60px;
     text-align: center !important;
-} */
+}
 
 
 /* .image {
@@ -268,7 +268,7 @@ nav a:hover {
     left: 10px;
     bottom: 10px;
     right: 10px;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.6);
     transform: scaleY(0);
     transition: transform 0.5s;
     border-radius: 50%;
@@ -297,6 +297,27 @@ nav a:hover {
 .container .box .details .content p {
     margin: 10px 0 0;
     padding: 0px;
+    font-size: 15px;
+}
+
+
+/* ===== EVENTS SECTION ===== */
+
+#events {
+    text-align: center;
+}
+
+.events-heading {
+    text-align: center !important;
+    font-family: 'Montserrat', sans-serif;
+    color: #19d3da;
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 35px;
+}
+
+.carousel-inner {
+    margin: auto;
 }
 
 
@@ -305,54 +326,26 @@ nav a:hover {
 #register {
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
 /* ===== CONTACT SECTION ===== */
 
-#contact {
-    margin-top: 50px;
+
+/* ===== FOOTER SECTION ===== */
+
+footer {
+    height: 53px;
+    background-color: #19d3da;
+    bottom: 0;
+    padding-bottom: 0;
 }
 
-.contact-para {
+footer p {
     text-align: center;
-}
-
-.contact-box-wrapper {
-    top: -60px;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-}
-
-.contact-box:first-child {
-    margin-right: 20px;
-}
-
-.contact-box {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 32px 40px;
-    background-color: #fff;
-    border: 1px solid #eaf0f6;
-}
-
-.cta, .cta--primary, .cta--primary-dark {
-    text-align: center;
-    border-radius: .1875rem;
-    transition: 0.3s ease-in-out;
-    display: inline-block;
-    text-decoration: none;
-    border: 0;
-    font-weight: 600;
-    line-height: 1.5em;
-    background-color: #ff7a59;
-    color: #fff;
-    border: 1px solid #ff7a59;
-    padding: 0.9em 1.388em;
-    font-size: .9375rem;
-    min-width: 8.555rem;
+    color: white;
+    font-size: 15px;
+    padding-top: 15px;
+    font-family: 'Montserrat', sans-serif;
 }
