--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav a:hover {
     margin: 2px;
     text-align: left;
     border-radius: 50px 0px 0px 50px;
-    transform: translate(145px, 0px);
+    transform: translate(140px, 0px);
     transition: all 0.5s;
 }
 
@@ -181,12 +181,12 @@ nav a:hover {
 /* ===== ABOUT SECTION ===== */
 
 #about {
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 .section-heading {
-    /* margin-top: 100px; */
-    text-align: center !important;
+    /* margin-top: 200px; */
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     color: #19d3da;
     font-weight: bold;
@@ -215,10 +215,10 @@ nav a:hover {
 
 /* ===== COMMUNITY SECTION ===== */
 
-#community {
-    margin-top: 60px;
+
+/* #community {
     text-align: center !important;
-}
+} */
 
 
 /* .image {
@@ -268,7 +268,7 @@ nav a:hover {
     left: 10px;
     bottom: 10px;
     right: 10px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.8);
     transform: scaleY(0);
     transition: transform 0.5s;
     border-radius: 50%;
@@ -297,27 +297,6 @@ nav a:hover {
 .container .box .details .content p {
     margin: 10px 0 0;
     padding: 0px;
-    font-size: 15px;
-}
-
-
-/* ===== EVENTS SECTION ===== */
-
-#events {
-    text-align: center;
-}
-
-.events-heading {
-    text-align: center !important;
-    font-family: 'Montserrat', sans-serif;
-    color: #19d3da;
-    font-weight: bold;
-    font-size: 30px;
-    margin-bottom: 35px;
-}
-
-.carousel-inner {
-    margin: auto;
 }
 
 
@@ -326,26 +305,81 @@ nav a:hover {
 #register {
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 50px;
 }
 
 
 /* ===== CONTACT SECTION ===== */
 
-
-/* ===== FOOTER SECTION ===== */
-
-footer {
-    height: 53px;
-    background-color: #19d3da;
-    bottom: 0;
-    padding-bottom: 0;
+#contact {
+    margin-top: 50px;
 }
 
-footer p {
+.contact-para {
     text-align: center;
-    color: white;
-    font-size: 15px;
-    padding-top: 15px;
+}
+
+.contact-box-wrapper {
+    top: -60px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-box:first-child {
+    margin-right: 20px;
+}
+
+.contact-box-1 {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    padding: 50px 50px;
+    background-color: #fff;
+    margin-top: 100px;
+    margin-left:25% ;
+    border-radius: 20%;
+    border: 1px solid #eaf0f6;
+}
+
+.contact-box-2{
+    margin-top: 1px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    padding: 50px 50px;
+    background-color: #fff;
+    margin-left:25% ;
+    border-radius: 20%;
+    border: 1px solid #eaf0f6;
+}
+
+.cta, .cta--primary, .cta--primary-dark {
+    text-align: center;
+    border-radius: .1875rem;
+    transition: 0.3s ease-in-out;
+    display: inline-block;
+    text-decoration: none;
+    border: 0;
+    font-weight: 600;
+    line-height: 1.5em;
+    background-color: #ff7a59;
+    color: #fff;
+    border: 1px solid #ff7a59;
+    padding: 0.9em 1.388em;
+    font-size: .9375rem;
+    min-width: 8.555rem;
+}
+
+.contact-us{
+    text-align:center;
     font-family: 'Montserrat', sans-serif;
+    color: #19d3da;
+    font-weight: bold;
+    font-size: 30px;
 }
