--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav a:hover {
     margin: 2px;
     text-align: left;
     border-radius: 50px 0px 0px 50px;
-    transform: translate(140px, 0px);
+    transform: translate(145px, 0px);
     transition: all 0.5s;
 }
 
@@ -134,6 +134,13 @@ nav a:hover {
     top: 150px;
 }
 
+.gif {
+    position: absolute;
+    top: 570px;
+    left: 400px;
+    box-shadow: 5px 5px 5px #464545;
+}
+
 .heading {
     font-family: 'Montserrat', sans-serif;
     font-size: 60px;
@@ -181,12 +188,12 @@ nav a:hover {
 /* ===== ABOUT SECTION ===== */
 
 #about {
-    margin-top: 200px;
+    margin-top: 700px;
 }
 
 .section-heading {
-    /* margin-top: 200px; */
-    text-align: center;
+    /* margin-top: 100px; */
+    text-align: center !important;
     font-family: 'Montserrat', sans-serif;
     color: #19d3da;
     font-weight: bold;
@@ -215,10 +222,10 @@ nav a:hover {
 
 /* ===== COMMUNITY SECTION ===== */
 
-
-/* #community {
+#community {
+    margin-top: 60px;
     text-align: center !important;
-} */
+}
 
 
 /* .image {
@@ -268,7 +275,7 @@ nav a:hover {
     left: 10px;
     bottom: 10px;
     right: 10px;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.6);
     transform: scaleY(0);
     transition: transform 0.5s;
     border-radius: 50%;
@@ -297,6 +304,27 @@ nav a:hover {
 .container .box .details .content p {
     margin: 10px 0 0;
     padding: 0px;
+    font-size: 15px;
+}
+
+
+/* ===== EVENTS SECTION ===== */
+
+#events {
+    text-align: center;
+}
+
+.events-heading {
+    text-align: center !important;
+    font-family: 'Montserrat', sans-serif;
+    color: #19d3da;
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 35px;
+}
+
+.carousel-inner {
+    margin: auto;
 }
 
 
@@ -305,6 +333,7 @@ nav a:hover {
 #register {
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
@@ -312,14 +341,24 @@ nav a:hover {
 
 #contact {
     margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+.contact-box-1 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.contact-box-2 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .contact-para {
     text-align: center;
+    font-size: 20px;
 }
 
 .contact-box-wrapper {
-    top: -60px;
+    /* top: -60px; */
     position: relative;
     display: flex;
     flex-direction: row;
@@ -339,12 +378,12 @@ nav a:hover {
     padding: 50px 50px;
     background-color: #fff;
     margin-top: 100px;
-    margin-left:25% ;
+    margin-left: 25%;
     border-radius: 20%;
     border: 1px solid #eaf0f6;
 }
 
-.contact-box-2{
+.contact-box-2 {
     margin-top: 1px;
     width: 50%;
     display: flex;
@@ -354,12 +393,20 @@ nav a:hover {
     text-align: center;
     padding: 50px 50px;
     background-color: #fff;
-    margin-left:25% ;
+    margin-left: 25%;
     border-radius: 20%;
     border: 1px solid #eaf0f6;
 }
 
-.cta, .cta--primary, .cta--primary-dark {
+.contact-box-2 a:hover {
+    text-decoration: none;
+    transform: scale(1.1);
+    color: white;
+}
+
+.cta,
+.cta--primary,
+.cta--primary-dark {
     text-align: center;
     border-radius: .1875rem;
     transition: 0.3s ease-in-out;
@@ -376,10 +423,50 @@ nav a:hover {
     min-width: 8.555rem;
 }
 
-.contact-us{
-    text-align:center;
+.contact-us {
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     color: #19d3da;
     font-weight: bold;
     font-size: 30px;
+}
+
+
+/* ===== SOCIAL MEDIA ICONS ===== */
+
+.social-img {
+    height: 35px;
+    width: 35px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+.social-img:hover {
+    transition: transform 0.3s;
+    transform: scale(1.1);
+}
+
+#social {
+    text-align: center;
+    margin: auto;
+    font-family: 'Montserrat', sans-serif;
+    color: #19d3da;
+}
+
+
+/* ===== FOOTER SECTION ===== */
+
+footer {
+    height: 53px;
+    background-color: #19d3da;
+    bottom: 0;
+    padding-bottom: 0;
+}
+
+footer p {
+    text-align: center;
+    color: white;
+    font-size: 15px;
+    padding-top: 15px;
+    font-family: 'Montserrat', sans-serif;
 }
